--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-  <h1>Hello World!</h1>  
-  <p>This is my first paragraph.</p>
-  <ol>this is an ordered list
-      here's another line 
-      and another
-  </ol>
-  <ul>this is an unordered list
-      here's another line
-  </ul>
+  <main>
+      <section class ="top">
+        <h1>Hello</h1>
+        <h2>my name is</h2>
+      </section>
+      <section class="middle">
+          <span>Greg Gilliam</span>
+      </section>
+      <section class="bottom"></section>
+
+  </main>
 </body> 
 </html>
