adding interactive name tag

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-  <main>
-      <section class ="top">
+     <input type="text" id="input-field">
+     <input type="color" id="colorField">
+    <button id ="submit-button">Update Name Tag</button>
+    <main>
+    <section class ="top" id="top-section">
         <h1>Hello</h1>
         <h2>my name is</h2>
       </section>
-      <section class="middle">
+      <section class="middle" id="middle-section">
           <span>Greg Gilliam</span>
       </section>
       <section class="bottom"></section>
-
   </main>
+<script type="module" src="app.js"></script>
 </body> 
-</html>
+</html> 
